@@ -1,5 +1,8 @@
 package fr.insee.rmes.modules.concepts.concept.domain.model;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+
 import fr.insee.rmes.modules.concepts.concept.domain.exceptions.InvalidConceptIdException;
 import fr.insee.rmes.modules.concepts.concept.domain.exceptions.InvalidCreateConceptCommandException;
 import fr.insee.rmes.modules.concepts.concept.domain.exceptions.MalformedConceptException;
@@ -7,28 +10,24 @@ import fr.insee.rmes.modules.concepts.concept.domain.model.commands.CreateConcep
 import fr.insee.rmes.modules.shared_kernel.domain.model.Lang;
 import fr.insee.rmes.modules.shared_kernel.domain.model.LocalisedLabel;
 import fr.insee.rmes.modules.shared_kernel.domain.model.ValidationStatus;
-import org.junit.jupiter.api.Test;
-
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import org.junit.jupiter.api.Test;
 
 class ConceptTest {
 
     private static final String DISSEMINATION_STATUS = "http://id.insee.fr/codes/base/statutDiffusion/Prive";
 
     @Test
-    void factory_create_initialises_a_new_concept_as_not_validated_with_an_initial_version() throws InvalidCreateConceptCommandException, InvalidConceptIdException {
+    void factory_create_initialises_a_new_concept_as_not_validated_with_an_initial_version()
+            throws InvalidCreateConceptCommandException, InvalidConceptIdException {
         var command = new CreateConceptCommand(
                 List.of(LocalisedLabel.ofDefaultLanguage("Mon concept")),
                 "HIE000000",
                 null,
                 DISSEMINATION_STATUS,
-                List.of("Collection-001")
-        );
+                List.of("Collection-001"));
 
         Concept concept = Concept.create(command, new ConceptId("c00001"));
 
@@ -44,17 +43,16 @@ class ConceptTest {
     }
 
     @Test
-    void factory_separates_default_label_from_alternative_labels() throws InvalidCreateConceptCommandException, InvalidConceptIdException {
+    void factory_separates_default_label_from_alternative_labels()
+            throws InvalidCreateConceptCommandException, InvalidConceptIdException {
         var command = new CreateConceptCommand(
                 List.of(
                         LocalisedLabel.ofDefaultLanguage("Concept FR"),
-                        LocalisedLabel.ofAlternativeLanguage("Concept EN")
-                ),
+                        LocalisedLabel.ofAlternativeLanguage("Concept EN")),
                 "HIE000000",
                 null,
                 DISSEMINATION_STATUS,
-                Collections.emptyList()
-        );
+                Collections.emptyList());
 
         Concept concept = Concept.create(command, new ConceptId("c00001"));
 
@@ -65,17 +63,17 @@ class ConceptTest {
     @Test
     void direct_constructor_rejects_labels_without_default_language() {
         assertThatThrownBy(() -> new Concept(
-                new ConceptId("c00001"),
-                List.of(LocalisedLabel.ofAlternativeLanguage("Only EN")),
-                "HIE000000",
-                null,
-                DISSEMINATION_STATUS,
-                LocalDateTime.now(),
-                null,
-                ValidationStatus.UNPUBLISHED,
-                ConceptVersion.initial(),
-                Collections.emptyList()
-        )).isInstanceOf(MalformedConceptException.class)
-          .hasMessageContaining("default language");
+                        new ConceptId("c00001"),
+                        List.of(LocalisedLabel.ofAlternativeLanguage("Only EN")),
+                        "HIE000000",
+                        null,
+                        DISSEMINATION_STATUS,
+                        LocalDateTime.now(),
+                        null,
+                        ValidationStatus.UNPUBLISHED,
+                        ConceptVersion.initial(),
+                        Collections.emptyList()))
+                .isInstanceOf(MalformedConceptException.class)
+                .hasMessageContaining("default language");
     }
 }
